<resources>
    <string name="app_name">MuhiEddinTahhanMassenger</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="laready_got_an_account">laready got an account?</string>
    <string name="back_to_register">back to register</string>
    <string name="select_photo">select photo</string>
    <string name="enter_text">enter text</string>
    <string name="button">Button</string>
    <string name="send">send</string>
    <string name="here_is_the_massage">here is the massage</string>
    <string name="textview">TextView</string>
    <string name="i_am_sending">I am sending</string>
    <string name="latest_massage">latest massage</string>
    <string name="username_latest_massage">username</string>
</resources>